Added registration add and read for registration and users
