# setok-client-angular/src/app/api/models.ts
@@ -1,3 +1,4 @@
 export { ItemDto } from './models/item-dto';
 export { Message } from './models/message';
+export { RegistrationDto } from './models/registration-dto';
 export { SetokResult } from './models/setok-result';
