# setok-client-angular/src/app/api/services.ts
@@ -1,2 +1,4 @@
 export { HomeService } from './services/home.service';
 export { ItemService } from './services/item.service';
+export { MigrationsService } from './services/migrations.service';
+export { RegistrationService } from './services/registration.service';
